--- a/header.html
+++ b/header.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://use.fontawesome.com/009740555a.js"></script>    
+    <script src="http://localhost:8080/bundle/bundle.js"></script>    
     <script>
         // let app = fin.desktop.Application.getCurrent();
         // const closeApp = () => app.close();
@@ -10,6 +11,9 @@
         const maxApp = () => app.close();
     </script>    
     <style>
+        body {
+            margin: 0;
+        }
         .header {
             width: 100%;
             height: 25px;
@@ -46,7 +50,24 @@
         .icon{
             color: #3B3C3A;
             font-size: 14px;
-        }   
+        }
+        iframe, object, embed {
+           max-width: 100%;
+           max-height: 100%;
+        }
+        .iFrameWrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 */
+            padding-top: 25px;
+            height: 0;
+        }
+        .iFrameWrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,6 +93,9 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="iFrameWrapper">
+        <iframe id ="iFrame" scrolling="no" frameborder="0"></iframe>
     </div>
 </body>
 </html>
