--- a/public/tray.html
+++ b/public/tray.html
@@ -147,20 +147,17 @@
     const newPodUrl = document.getElementById('new-pod-url');
     const POD_LS_KEY = 'pods';
     const pods = new Set(JSON.parse(localStorage.getItem(POD_LS_KEY) || '[]'));
+    const appsToClose = new Set();
 
     const thisWin = fin.desktop.Window.getCurrent();
     const uuid = thisWin.uuid;
     const symApp = fin.desktop.Application.wrap(uuid);
     const symWin = fin.desktop.Window.wrap(uuid, uuid);
-    const baseDimentions = {
-        width: 200,
-        height: 163 + 33,
-    };
-
     let clickBasey;
+    let teardownOtherPods = true;
 
     symWin.getInfo(i => {
-        primaryPod.innerHTML = stripProtocol(i.url); //.replace(/https?:\/\//, '').replace(/(\/$)/, '');
+        primaryPod.innerHTML = stripProtocol(i.url);
     })
 
     myDropdown.addEventListener('click', clickHandler);
@@ -216,6 +213,7 @@
                 const opts = await baseOpts();
                 opts.url = podUrl;
                 opts.uuid = podUrl;
+                appsToClose.add(podUrl);
                 const podApp = new fin.desktop.Application(opts, _ => podApp.run(), e => console.log(e));
             }
         }
@@ -338,10 +336,15 @@
             console.log('created!', msg, senderUuid, senderName);
             if (senderUuid === uuid) return;
 
-            if (whenCreated > msg) {
-                symApp.removeTrayIcon(thisWin.close.bind(thisWin))
+
+            if (whenCreated > msg) { // there is already another sys tray window
+                symApp.removeTrayIcon(() => {
+                    teardownOtherPods = false;
+                    thisWin.close(true);
+                });
+
+                fin.desktop.InterApplicationBus.send(uuid, uuid, 'must-close', true);
             } else {
-                console.log('sender!', senderUuid, senderName, 'sys-tray-created', whenCreated);
                 fin.desktop.InterApplicationBus.send(senderUuid, senderName, 'sys-tray-created', whenCreated);
             }
         });
